--- a/index.html
+++ b/index.html
@@ -3,24 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Try it out</title>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        body {
+            background-color: #f5f5f5;
+            color: #3a3a5f;
+        }
         #code-label, #code, #code:focus, #code:focus-visible, #code:focus-within {
-            font-family: monospace;
+            font-family: 'JetBrains Mono', monospace;            background-color: #f5f5f5;
+            color: #3a3a5f;
             white-space: pre-wrap;
             border: none;
             box-shadow: none;
             outline: none;
         }
-        pre:has(#output) {
+        #output {
+            white-space: pre-wrap;
+            font-family: 'JetBrains Mono', monospace;
             margin-bottom: 0;
         }
     </style>
 </head>
 <body>
 <form id="form">
-    <pre><output id="output"></output></pre>
-    <label id="code-label" for="code">>>> </label>
-    <input id="code" type="text" autocomplete="off" autofocus/>
+    <output id="output"></output>
+    <label id="code-label" for="code">>>> <input id="code" type="text" autocomplete="off" autofocus/></label>
 </form>
 <script type="module">
     import * as Interpreter from "./index.js";
