--- a/index.html
+++ b/index.html
@@ -37,10 +37,18 @@
 
     const output = document.getElementById("output");
     const code = document.getElementById("code");
-
+    const history = []
+    let history_index = 0
     document.getElementById("code").addEventListener('keydown', function (event) {
         if (event.key === "Enter" && event.ctrlKey) {
             repl()
+        } else if (event.key === "ArrowUp" && history_index > 0) {
+            code.value = history[--history_index]
+        } else if (event.key === "ArrowDown" && (history_index + 1) < history.length) {
+            code.value = history[++history_index]
+        } else if (event.key === "ArrowDown") {
+            history_index = history.length
+            code.value = ""
         }
     });
 
@@ -48,6 +56,8 @@
         env = Interpreter.evaluate(code.value)(env)
         const tail = ">>> " + code.value + "\n" + Interpreter.print(env) + "\n"
         output.innerText = output.innerText + tail
+        history.push(code.value)
+        history_index = history.length
         code.value = ""
     }
 
