--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Try it out</title>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -10,14 +10,17 @@
             background-color: #f5f5f5;
             color: #3a3a5f;
         }
+
         #code-label, #code, #code:focus, #code:focus-visible, #code:focus-within {
-            font-family: 'JetBrains Mono', monospace;            background-color: #f5f5f5;
+            font-family: 'JetBrains Mono', monospace;
+            background-color: #f5f5f5;
             color: #3a3a5f;
             white-space: pre-wrap;
             border: none;
             box-shadow: none;
             outline: none;
         }
+
         #output {
             white-space: pre-wrap;
             font-family: 'JetBrains Mono', monospace;
@@ -28,7 +31,13 @@
 <body>
 <form id="form">
     <output id="output"></output>
-    <label id="code-label" for="code">>>> <input id="code" type="text" autocomplete="off" autofocus/></label>
+    <label id="code-label" for="code">>>> <input
+            id="code"
+            type="text"
+            autocomplete="off"
+            autocapitalize="none"
+            autofocus
+    /></label>
 </form>
 <script type="module">
     import * as Interpreter from "./index.js";
