--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
         body {
             background-color: #f5f5f5;
             color: #3a3a5f;
+            margin: 0;
+            padding: 0;
         }
 
-        #code-label, #code, #code:focus, #code:focus-visible, #code:focus-within {
+        #code-label,
+        #preview, #preview:focus-visible, #preview:focus,
+        #code, #code:focus, #code:focus-visible, #code:focus-within {
             font-family: 'JetBrains Mono', monospace;
-            background-color: #f5f5f5;
+            background: transparent;
             color: #3a3a5f;
             white-space: pre-wrap;
             border: none;
             box-shadow: none;
             outline: none;
+            font-size: medium;
         }
 
         #output {
@@ -26,12 +31,39 @@
             font-family: 'JetBrains Mono', monospace;
             margin-bottom: 0;
         }
+
+        #code-label {
+            position: relative;
+            display: inline-block;
+            width: max-content;
+            margin: 0;
+            padding: 0;
+        }
+
+        #code, #code:focus-visible, #code:focus {
+            color: #3a3a5f;
+            background: transparent;
+        }
+        #preview, #preview:focus-visible, #preview:focus {
+            color: green;
+        }
+        #code, #code:focus-visible, #code:focus,
+        #preview, #preview:focus-visible, #preview:focus {
+            top: 0;
+            left: 0;
+            padding-left: 4ex;
+            padding-top: 0;
+            padding-right: 0;
+            padding-bottom: 0;
+            width: max-content;
+            position: absolute;
+        }
     </style>
 </head>
 <body>
 <form id="form">
     <output id="output"></output>
-    <label id="code-label" for="code">>>> <input
+    <label id="code-label" for="code">>>> <input id="preview" type="text"/><input
             id="code"
             type="text"
             autocomplete="off"
@@ -46,10 +78,31 @@
 
     const output = document.getElementById("output");
     const code = document.getElementById("code");
+    const preview = document.getElementById("preview");
+    const keywords = ["let", "in"]
     const history = []
     let history_index = 0
-    document.getElementById("code").addEventListener('keydown', function (event) {
-        if (event.key === "Enter" && event.ctrlKey) {
+    code.addEventListener("input", e => {
+        let text = code.value;
+        let words = text.split(" ");
+        let word = words[words.length - 1]
+        let keyword = keywords.filter(keyword => keyword.startsWith(word))[0]
+        let padding = text.substring(0, text.length - word.length).replace(/./g," ");
+        if (keyword && word.length > 0) {
+            text = padding + keyword + " "
+        } else {
+            let names = Interpreter.names(env)
+            let name = names.filter(name => name.startsWith(word))[0]
+            if (name && word.length > 0) {
+                text = padding + name
+            } else {
+                text = padding
+            }
+        }
+        preview.value = text
+    })
+    code.addEventListener('keydown', function (event) {
+        if (event.key === "Enter" && !event.ctrlKey) {
             repl()
         } else if (event.key === "ArrowUp" && history_index > 0) {
             code.value = history[--history_index]
@@ -58,6 +111,10 @@
         } else if (event.key === "ArrowDown") {
             history_index = history.length
             code.value = ""
+        } else if (event.key === "Tab" && code.value.length < preview.value.length) {
+            code.value = code.value + preview.value.substring(code.value.length)
+            preview.value = ""
+            event.preventDefault()
         }
     });
 
@@ -68,6 +125,7 @@
         history.push(code.value)
         history_index = history.length
         code.value = ""
+        preview.value = ""
     }
 
     document.getElementById("form").addEventListener("submit", (event) => {
