Disable spellchecking in try it out.

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 <body>
 <form id="form">
     <output id="output"></output>
-    <label id="code-label" for="code">>>> <textarea id="preview" type="text"></textarea><textarea
+    <label id="code-label" for="code">>>> <textarea id="preview" spellcheck="false"></textarea><textarea
             id="code"
-            type="text"
             autocomplete="off"
             autocapitalize="none"
+            spellcheck="false"
             placeholder="shift + enter: creates a new line
 ctrl + up/down: moves in history"
             autofocus></textarea></label>
